traces/bug_919.txt
src/fflib/problem.cpp:6274: error: NULL_DEREFERENCE
  pointer `bb` last assigned on line 6273 could be null and is dereferenced at line 6274, column 17.
Showing all 9 steps of the trace


src/fflib/problem.cpp:6261:1: start of procedure FieldOfForm()
6259.   
6260.       }*/
6261. > bool FieldOfForm( list<C_F0> & largs ,bool complextype)  // true => complex problem 
6262.   {
6263.     //  bool   iscomplextype=complextype;

src/fflib/problem.cpp:6264:3: Skipping _List_iterator: function or method not found
6262.   {
6263.     //  bool   iscomplextype=complextype;
6264.     list<C_F0>::iterator ii,ib=largs.begin(),
          ^
6265.       ie=largs.end();
6266.    // bool complextype =false;   

src/fflib/problem.cpp:6267:8: Skipping operator=: function or method not found
6265.       ie=largs.end();
6266.    // bool complextype =false;   
6267.     for (ii=ib;ii != ie;ii++)
               ^
6268.       {
6269.         Expression e=ii->LeftValue();

src/fflib/problem.cpp:6267:14: Loop condition is true. Entering loop body
6265.       ie=largs.end();
6266.    // bool complextype =false;   
6267.     for (ii=ib;ii != ie;ii++)
                     ^
6268.       {
6269.         Expression e=ii->LeftValue();

src/fflib/problem.cpp:6269:7: Skipping LeftValue: function or method not found
6267.     for (ii=ib;ii != ie;ii++)
6268.       {
6269.         Expression e=ii->LeftValue();
              ^
6270.         aType r = ii->left();
6271.         if (r==atype<const  FormBilinear *>()) 

src/fflib/problem.cpp:6270:7: Skipping left: function or method not found
6268.       {
6269.         Expression e=ii->LeftValue();
6270.         aType r = ii->left();
              ^
6271.         if (r==atype<const  FormBilinear *>()) 
6272.           {

src/fflib/problem.cpp:6271:11: Taking true branch
6269.         Expression e=ii->LeftValue();
6270.         aType r = ii->left();
6271.         if (r==atype<const  FormBilinear *>()) 
                  ^
6272.           {
6273.             const  FormBilinear * bb=dynamic_cast<const  FormBilinear *>(e);

src/fflib/problem.cpp:6273:11: 
6271.         if (r==atype<const  FormBilinear *>()) 
6272.           {
6273. >           const  FormBilinear * bb=dynamic_cast<const  FormBilinear *>(e);
6274.             if (! bb->b->mappable(BCastToR)) 
6275.               complextype=true;

src/fflib/problem.cpp:6274:17: 
6272.           {
6273.             const  FormBilinear * bb=dynamic_cast<const  FormBilinear *>(e);
6274. >           if (! bb->b->mappable(BCastToR)) 
6275.               complextype=true;
6276.             }
